# xapp-multimetric-ho

./: .gitignore  CITATION.cff  LICENSE  README.md
conf/: gnb_b210.conf  gnb_b210bis.conf
data/trials/: README.md
data/trials/baseline/: handover_trigger_metrics_20260326_171400_default_999.csv  handover_trigger_metrics_20260326_171928_default_629.csv  ho_timer_20260326_172619_178.csv  ho_timer_20260326_173410_680.csv  ho_timer_20260326_174111_360.csv  ho_timer_20260326_175440_068.csv  ho_timer_20260326_175955_378.csv  ho_timer_20260327_112434_063.csv  ho_timer_20260327_113915_341.csv
data/trials/multimetric/: ho_multi_02_11_29_53.csv  ho_multi_27_18_09_36.csv  ho_multi_27_18_42_42.csv  ho_multi_29_16_23_10.csv  ho_multi_29_16_28_17.csv
docs/: KNOWN_ISSUES.md  REPRODUCE.md
patches/: flexric-rc-style3.patch  oai-kpm-sinr-fix.patch  oai-n2-handover-fixes.patch  oai-rc-style3-extension.patch
scripts/: analyze_metrics.py
xapp/: CMakeLists.txt  README_multimetric.md  README_simple.md  README_timer.md  xapp_advanced_handover_simple.c  xapp_advanced_handover_timer.c  xapp_ho_multimetric.c
